--- a/labs-ios-starter/Map Screen/MapScreen.storyboard
+++ b/labs-ios-starter/Map Screen/MapScreen.storyboard
@@ -18,22 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aOY-yt-gpM">
-                                <rect key="frame" x="358.5" y="468" width="35.5" height="33.5"/>
-                                <state key="normal" image="favoriteButton"/>
-                            </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lIR-xt-PQx">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="448"/>
                             </mapView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bX5-C6-Cgw">
-                                <rect key="frame" x="20" y="468" width="331" height="41"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KTc-S8-uHI">
+                                <rect key="frame" x="20" y="468" width="374" height="41"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bX5-C6-Cgw">
+                                        <rect key="frame" x="0.0" y="0.0" width="336.5" height="41"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <color key="textColor" name="DarkBlue"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aOY-yt-gpM">
+                                        <rect key="frame" x="336.5" y="0.0" width="37.5" height="41"/>
+                                        <state key="normal" image="uncheckedHeart"/>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="331" id="Xph-yd-xBH"/>
+                                    <constraint firstItem="bX5-C6-Cgw" firstAttribute="width" secondItem="KTc-S8-uHI" secondAttribute="width" multiplier="0.9" id="hiw-dP-ere"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <color key="textColor" name="DarkBlue"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="unh-oa-DuP">
                                 <rect key="frame" x="20" y="559" width="104" height="92"/>
                                 <subviews>
@@ -256,43 +261,41 @@
                         <viewLayoutGuide key="safeArea" id="pwS-ca-Cct"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="aOY-yt-gpM" firstAttribute="top" secondItem="lIR-xt-PQx" secondAttribute="bottom" constant="20" id="0Rm-v1-2sx"/>
                             <constraint firstItem="iDg-uw-wSG" firstAttribute="top" secondItem="BpU-bd-Nff" secondAttribute="bottom" constant="35" id="1oW-Ge-PMV"/>
                             <constraint firstItem="lIR-xt-PQx" firstAttribute="height" secondItem="BAD-gb-ue6" secondAttribute="height" multiplier="0.5" id="238-BG-DQq"/>
-                            <constraint firstItem="aOY-yt-gpM" firstAttribute="leading" secondItem="bX5-C6-Cgw" secondAttribute="trailing" constant="7.5" id="3dG-BZ-Jkq"/>
+                            <constraint firstItem="KTc-S8-uHI" firstAttribute="top" secondItem="lIR-xt-PQx" secondAttribute="bottom" constant="20" id="4lp-vQ-ceN"/>
                             <constraint firstItem="Qxm-SW-HDW" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="5MQ-Lx-NG5"/>
+                            <constraint firstItem="BpU-bd-Nff" firstAttribute="top" secondItem="KTc-S8-uHI" secondAttribute="bottom" constant="50" id="6I3-sF-MyZ"/>
                             <constraint firstItem="pwS-ca-Cct" firstAttribute="trailing" secondItem="oI7-ma-gZx" secondAttribute="trailing" constant="20" id="7KG-nv-u0d"/>
+                            <constraint firstItem="xm0-es-E6n" firstAttribute="top" secondItem="KTc-S8-uHI" secondAttribute="bottom" constant="50" id="8Bj-m7-9pZ"/>
+                            <constraint firstItem="yyn-0d-TOg" firstAttribute="top" secondItem="KTc-S8-uHI" secondAttribute="bottom" constant="50" id="8LZ-xL-aVF"/>
+                            <constraint firstItem="pwS-ca-Cct" firstAttribute="trailing" secondItem="KTc-S8-uHI" secondAttribute="trailing" constant="20" id="8S3-Ft-GI2"/>
                             <constraint firstItem="Cjl-hu-3Xi" firstAttribute="top" secondItem="unh-oa-DuP" secondAttribute="bottom" constant="35" id="9Dr-fu-BOY"/>
                             <constraint firstItem="unh-oa-DuP" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="AD0-wR-s4e"/>
+                            <constraint firstItem="KTc-S8-uHI" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="AT4-Zl-k8w"/>
                             <constraint firstItem="SpI-ok-rPe" firstAttribute="top" secondItem="pwS-ca-Cct" secondAttribute="top" constant="20" id="Cpr-jq-s4d"/>
-                            <constraint firstItem="yyn-0d-TOg" firstAttribute="top" secondItem="bX5-C6-Cgw" secondAttribute="bottom" constant="50" id="FeY-zh-dBb"/>
                             <constraint firstItem="xm0-es-E6n" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="Gmp-so-VEx"/>
-                            <constraint firstItem="xm0-es-E6n" firstAttribute="top" secondItem="bX5-C6-Cgw" secondAttribute="bottom" constant="50" id="GyT-qE-Q7L"/>
                             <constraint firstItem="SpI-ok-rPe" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="H36-7d-csM"/>
                             <constraint firstItem="iDg-uw-wSG" firstAttribute="centerX" secondItem="BAD-gb-ue6" secondAttribute="centerX" id="HJN-le-pLu"/>
                             <constraint firstItem="pwS-ca-Cct" firstAttribute="trailing" secondItem="Mfv-RV-vOn" secondAttribute="trailing" constant="20" id="L90-vz-4Nr"/>
                             <constraint firstItem="Cjl-hu-3Xi" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="LHZ-JJ-S7R"/>
                             <constraint firstItem="pwS-ca-Cct" firstAttribute="trailing" secondItem="lIR-xt-PQx" secondAttribute="trailing" id="LXQ-e1-dEW"/>
+                            <constraint firstItem="Mfv-RV-vOn" firstAttribute="top" secondItem="KTc-S8-uHI" secondAttribute="bottom" constant="50" id="MfX-on-vv7"/>
                             <constraint firstItem="ljE-yj-QOe" firstAttribute="centerX" secondItem="BAD-gb-ue6" secondAttribute="centerX" id="NHA-eQ-Y2z"/>
                             <constraint firstItem="BpU-bd-Nff" firstAttribute="centerX" secondItem="BAD-gb-ue6" secondAttribute="centerX" id="OBL-66-bFF"/>
                             <constraint firstItem="pwS-ca-Cct" firstAttribute="trailing" secondItem="AtU-4D-s07" secondAttribute="trailing" constant="20" id="QXx-iu-Zi1"/>
-                            <constraint firstItem="heQ-gD-q59" firstAttribute="top" secondItem="bX5-C6-Cgw" secondAttribute="bottom" constant="50" id="S5o-th-cr8"/>
-                            <constraint firstItem="bX5-C6-Cgw" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="SMR-PX-38a"/>
                             <constraint firstItem="ljE-yj-QOe" firstAttribute="top" secondItem="BpU-bd-Nff" secondAttribute="bottom" constant="35" id="VcP-fk-L51"/>
-                            <constraint firstItem="Mfv-RV-vOn" firstAttribute="top" secondItem="bX5-C6-Cgw" secondAttribute="bottom" constant="50" id="WAA-XR-anW"/>
                             <constraint firstItem="79r-Kz-UvU" firstAttribute="top" secondItem="unh-oa-DuP" secondAttribute="bottom" constant="35" id="Y3h-aZ-ytE"/>
-                            <constraint firstItem="unh-oa-DuP" firstAttribute="top" secondItem="bX5-C6-Cgw" secondAttribute="bottom" constant="50" id="YOe-7E-X6L"/>
                             <constraint firstItem="lIR-xt-PQx" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" id="Z9Y-sU-sRP"/>
                             <constraint firstItem="heQ-gD-q59" firstAttribute="centerX" secondItem="BAD-gb-ue6" secondAttribute="centerX" id="aRp-x8-9pu"/>
-                            <constraint firstItem="bX5-C6-Cgw" firstAttribute="top" secondItem="lIR-xt-PQx" secondAttribute="bottom" constant="20" id="ahV-WJ-p4o"/>
+                            <constraint firstItem="heQ-gD-q59" firstAttribute="top" secondItem="KTc-S8-uHI" secondAttribute="bottom" constant="50" id="cCv-rX-fSk"/>
                             <constraint firstItem="AtU-4D-s07" firstAttribute="top" secondItem="yyn-0d-TOg" secondAttribute="bottom" constant="35" id="cYH-d4-Uo8"/>
-                            <constraint firstItem="pwS-ca-Cct" firstAttribute="trailing" secondItem="aOY-yt-gpM" secondAttribute="trailing" constant="20" id="e80-rK-01r"/>
                             <constraint firstItem="79r-Kz-UvU" firstAttribute="leading" secondItem="pwS-ca-Cct" secondAttribute="leading" constant="20" id="gw6-sz-q1W"/>
                             <constraint firstItem="Qxm-SW-HDW" firstAttribute="top" secondItem="SpI-ok-rPe" secondAttribute="bottom" constant="20" id="jew-go-CEv"/>
+                            <constraint firstItem="unh-oa-DuP" firstAttribute="top" secondItem="KTc-S8-uHI" secondAttribute="bottom" constant="50" id="jxx-eG-dHG"/>
                             <constraint firstItem="pwS-ca-Cct" firstAttribute="trailing" secondItem="yyn-0d-TOg" secondAttribute="trailing" constant="20" id="kzL-W7-8sJ"/>
                             <constraint firstItem="oI7-ma-gZx" firstAttribute="top" secondItem="yyn-0d-TOg" secondAttribute="bottom" constant="35" id="uTK-bu-qnf"/>
                             <constraint firstItem="lIR-xt-PQx" firstAttribute="top" secondItem="BAD-gb-ue6" secondAttribute="top" id="wfw-cG-Utm"/>
-                            <constraint firstItem="BpU-bd-Nff" firstAttribute="top" secondItem="bX5-C6-Cgw" secondAttribute="bottom" constant="50" id="x4V-aE-iss"/>
                         </constraints>
                     </view>
                     <connections>
@@ -369,6 +372,7 @@
         <image name="livability" width="35" height="35"/>
         <image name="rentalPrice" width="25" height="22.5"/>
         <image name="searchIcon" width="40" height="37.5"/>
+        <image name="uncheckedHeart" width="28" height="27"/>
         <image name="walkability" width="35" height="35"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
         <namedColor name="AccentYellow">
