--- a/labs-ios-starter/Favorites/Favorites.storyboard
+++ b/labs-ios-starter/Favorites/Favorites.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fhG-KI-gxj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Lu4-rd-iND">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5Ce-gk-cqj">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N8d-Jz-nGY">
                                     <size key="itemSize" width="414" height="232"/>
@@ -127,17 +127,57 @@
                             <constraint firstItem="AhX-OJ-OTO" firstAttribute="bottom" secondItem="5Ce-gk-cqj" secondAttribute="bottom" id="UZH-wH-AVq"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="UpI-JA-IgL">
+                        <barButtonItem key="leftBarButtonItem" title="Item" style="plain" id="OU2-Wp-hlG">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="u7a-cm-yHu">
+                                <rect key="frame" x="20" y="3" width="94" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="searchIcon"/>
+                                <connections>
+                                    <action selector="backNavigationButtonPressed:" destination="fhG-KI-gxj" eventType="touchUpInside" id="jQr-Ph-JCx"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="colletionView" destination="5Ce-gk-cqj" id="XSI-A0-Ge7"/>
+                        <segue destination="Rbf-uB-lpz" kind="presentation" identifier="unwindToSearch" modalPresentationStyle="fullScreen" id="lAl-lk-S8F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ciF-1v-gCE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1405.7971014492755" y="172.76785714285714"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="6Tk-ho-I2g">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Search" id="Rbf-uB-lpz" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m2j-Mm-py8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1999" y="173"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LQc-R0-Gos">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Lu4-rd-iND" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xAV-Zg-ajY">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fhG-KI-gxj" kind="relationship" relationship="rootViewController" id="rlt-K4-BKW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9BM-T0-eJX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="495.6521739130435" y="172.76785714285714"/>
         </scene>
     </scenes>
     <resources>
         <image name="favoriteButton" width="35.5" height="33.5"/>
+        <image name="searchIcon" width="40" height="37.5"/>
         <namedColor name="DarkBlue">
             <color red="0.063000001013278961" green="0.27099999785423279" blue="0.45100000500679016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
