--- a/labs-ios-starter/Map Screen/MapScreen.storyboard
+++ b/labs-ios-starter/Map Screen/MapScreen.storyboard
@@ -20,6 +20,9 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lIR-xt-PQx">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="448"/>
+                                <connections>
+                                    <outlet property="delegate" destination="k2w-x0-7Q1" id="1BP-M3-azI"/>
+                                </connections>
                             </mapView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KTc-S8-uHI">
                                 <rect key="frame" x="20" y="468" width="374" height="41"/>
