--- a/labs-ios-starter/App Lifecycle/Base.lproj/LaunchScreen.storyboard
+++ b/labs-ios-starter/App Lifecycle/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="brr-Fs-cXs">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CitySpireLogo-Light" translatesAutoresizingMaskIntoConstraints="NO" id="brr-Fs-cXs">
                                 <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="DarkBlue"/>
+                        <constraints>
+                            <constraint firstItem="brr-Fs-cXs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Gbg-S2-Jwy"/>
+                            <constraint firstItem="brr-Fs-cXs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="UTG-Wb-8zD"/>
+                            <constraint firstItem="brr-Fs-cXs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cGL-Ph-qJd"/>
+                            <constraint firstItem="brr-Fs-cXs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="340" id="omG-Gr-G2H"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -32,6 +37,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="CitySpireLogo-Light" width="234" height="66"/>
         <namedColor name="DarkBlue">
             <color red="0.063000001013278961" green="0.27099999785423279" blue="0.45100000500679016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
