--- a/labs-ios-starter/Search/Search.storyboard
+++ b/labs-ios-starter/Search/Search.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="0.0" y="562" width="414" height="334"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qFG-Cc-DMo">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFG-Cc-DMo">
                                 <rect key="frame" x="20" y="251" width="374" height="105"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
