Added accessibility identifiers

--- a/labs-ios-starter/Login/Base.lproj/Main.storyboard
+++ b/labs-ios-starter/Login/Base.lproj/Main.storyboard
@@ -20,6 +20,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mXo-da-Z8S">
                                 <rect key="frame" x="343" y="790" width="21" height="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="arrowshape.turn.up.right.fill" catalog="system"/>
                                 <connections>
                                     <segue destination="aOC-qF-9qB" kind="presentation" modalPresentationStyle="fullScreen" id="dot-8d-cdO"/>
@@ -27,10 +28,14 @@
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Map" translatesAutoresizingMaskIntoConstraints="NO" id="cY4-Oc-Cfw">
                                 <rect key="frame" x="0.0" y="-5" width="417" height="605"/>
+                                <accessibility key="accessibilityConfiguration" identifier="mapBackground" label="Map background">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CQk-Xf-had" customClass="StyledButton" customModule="labs_ios_starter" customModuleProvider="target">
                                 <rect key="frame" x="137" y="613" width="140" height="46"/>
                                 <color key="backgroundColor" name="LightBlue"/>
+                                <accessibility key="accessibilityConfiguration" identifier="signInButton" label="Sign in button"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="3fw-FJ-fCN"/>
                                     <constraint firstAttribute="width" constant="140" id="Kte-k8-DRJ"/>
@@ -44,6 +49,7 @@
                             </button>
                             <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1rE-Kz-bu3">
                                 <rect key="frame" x="343" y="832" width="51" height="30"/>
+                                <accessibility key="accessibilityConfiguration" identifier="skipOkta"/>
                                 <state key="normal" title="To Map"/>
                                 <connections>
                                     <segue destination="dcE-4f-NcJ" kind="presentation" modalPresentationStyle="fullScreen" id="aAr-qi-g6M"/>
@@ -51,6 +57,9 @@
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CitySpireLogo-Dark" translatesAutoresizingMaskIntoConstraints="NO" id="41U-LN-ghq">
                                 <rect key="frame" x="87" y="277" width="240" height="128"/>
+                                <accessibility key="accessibilityConfiguration" identifier="cityScapeLogo" label="Logo">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="z7C-82-CiM"/>
                                 </constraints>
