--- a/labs-ios-starter/Search/Search.storyboard
+++ b/labs-ios-starter/Search/Search.storyboard
@@ -24,10 +24,16 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOg-oI-DvJ" customClass="CardView" customModule="labs_ios_starter" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="562" width="414" height="334"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <accessibility key="accessibilityConfiguration" identifier="cardView">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Let's start with where do you see yourself next? " textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFG-Cc-DMo">
                                 <rect key="frame" x="20" y="251" width="374" height="105"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <accessibility key="accessibilityConfiguration" identifier="lowerTitle">
+                                    <accessibilityTraits key="traits" staticText="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="cAn-9R-9T8"/>
                                     <constraint firstAttribute="height" constant="105" id="zSA-lx-15X"/>
@@ -38,6 +44,7 @@
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Great experiences are just around the corner" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqJ-tT-hhk">
                                 <rect key="frame" x="20" y="101.5" width="374" height="143.5"/>
+                                <accessibility key="accessibilityConfiguration" identifier="mainTitle"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="8Yc-nl-ich"/>
                                 </constraints>
@@ -71,6 +78,9 @@
                             </searchBar>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="touristMap" translatesAutoresizingMaskIntoConstraints="NO" id="XIi-pr-dlF">
                                 <rect key="frame" x="0.0" y="590" width="414" height="306"/>
+                                <accessibility key="accessibilityConfiguration" identifier="touristMap" label="Tourist Map">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="414" id="LXz-ob-Okp"/>
                                     <constraint firstAttribute="height" constant="306" id="qgZ-0k-ZuN"/>
@@ -78,6 +88,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66d-ah-7SF">
                                 <rect key="frame" x="351" y="44" width="36" height="34"/>
+                                <accessibility key="accessibilityConfiguration" identifier="favoritesButton" label="Favorites Button"/>
                                 <state key="normal" image="favoriteButton"/>
                                 <connections>
                                     <segue destination="RGt-l3-Amp" kind="presentation" identifier="searchToFavorites" modalPresentationStyle="fullScreen" id="10j-ZQ-uI4"/>
